All_Component_DX/force-app/main/default/objects/SM_SFMTransactionSync__c/SM_SFMTransactionSync__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This is an Internal object used to cache the request id and the local id of records coming in for insert.</description>
    <label>SFMTransactionSync</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>SFMTransactionSync Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFMTransactionSync</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>