All_Component_DX/force-app/main/default/objects/SM_SFMTransactionSync__c/fields/SM_Client_Sync_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Client_Sync_Request_Id__c</fullName>
    <description>Stores the unique request Id generated by the Mobile clients during sync</description>
    <inlineHelpText>Stores the unique request Id generated by the Mobile clients during sync</inlineHelpText>
    <label>Client Sync Request Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>