All_Component_DX/force-app/main/default/objects/SM_SFMTransactionSync__c/fields/SM_Local_and_Platform_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Local_and_Platform_Id__c</fullName>
    <description>Stores the local record Id against salesforce Id used internally by sync engine</description>
    <inlineHelpText>Stores the local record Id against salesforce Id used internally by sync engine</inlineHelpText>
    <label>Local and Platform Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>