All_Component_DX/force-app/main/default/objects/SM_SFMTransactionSync__c/fields/SM_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Operation_Type__c</fullName>
    <description>Determines the operation type (Insert/Update) used during sync internally.</description>
    <inlineHelpText>Determines the operation type (Insert/Update) used during sync internally.</inlineHelpText>
    <label>Operation Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>